# metaflow-dagster

./: .gitignore  LICENSE  README.md  pyproject.toml  ux_test_config.yaml
.github/workflows/: ci.yml  e2e.yml  ux-tests.yml
metaflow_extensions/dagster/plugins/: mfextinit_dagster.py
metaflow_extensions/dagster/plugins/dagster/: dagster_cli.py  dagster_compiler.py  dagster_deployer.py  dagster_deployer_objects.py
tests/: conftest.py  test_cli_utils.py  test_compiler.py  test_deployer_objects.py  test_e2e.py  test_launch.py
tests/flows/: branching_flow.py  conditional_flow.py  custom_named_flow.py  foreach_flow.py  linear_flow.py  multibody_foreach_flow.py  nested_foreach_3level_flow.py  nested_foreach_flow.py  parametrized_flow.py  retry_flow.py  single_step_named_flow.py
