[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-dagster"
version = "0.3.6"
description = "Metaflow extension to compile and deploy flows as Dagster jobs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "metaflow>=2.10",
]

[project.optional-dependencies]
test = [
    "dagster>=1.7",
    "dagster-webserver",
    "pytest>=7",
    "pytest-timeout",
    "pytest-cov",
]
lint = [
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax for target Python version)
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (common bugs and design issues)
    "C4",   # flake8-comprehensions (unnecessary collection literals)
]
ignore = [
    "E501",  # line too long (enforced by formatter, not checker)
    "B008",  # do not perform function calls in default arguments
    "B904",  # raise from None in except blocks
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metaflow_extensions*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
log_cli = true
log_cli_level = "INFO"
markers = [
    "e2e: end-to-end tests that compile flows and execute them via dagster job execute",
]
addopts = "--cov=metaflow_extensions/dagster/plugins/dagster --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["metaflow_extensions/dagster/plugins/dagster"]
omit = ["tests/*", "*/mfextinit_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.pyright]
include = ["metaflow_extensions"]
pythonVersion = "3.11"
